--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
     "autoprefixer": "^10.4.8",
