--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.6.0",
     "next": "latest",
+    "plotly.js": "^2.14.0",
     "react": "^18.2.0",
     "react-barcode": "^1.4.5",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
